--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,5 +1,5 @@
 # .github/workflows/build-linux.yml
-# Last modified: 05-Feb-2024 (kobayasy)
+# Last modified: 18-Apr-2025 (kobayasy)
 
 name: Linux
 
@@ -7,6 +7,7 @@ on:
   push:
     branches:
     - main
+  workflow_dispatch:
 
 jobs:
   build:
